--- a/Movies_App/css/style.css
+++ b/Movies_App/css/style.css
@@ -12,7 +12,8 @@ h1{
 
   width: 100%;
   border : 2px solid red;
-  background-color: rgba(255,0,0,0.4);
+  background-color: #B22222;
+
 }
 
 .main{
@@ -120,12 +121,33 @@ h1{
   margin: auto;
   height: 80%;
   overflow: scroll;
+  border-collapse: collapse;
 
 }
 th,td{
   width: 20%;
   border: 1px solid gray;
   padding: 10px;
-  text-align: center;
+  text-align: left;
+  vertical-align: middle;
+
+}
+
+th{
+  padding: 20px;
+  font-weight: bold;
+  font-family:monospace;
+  font-size: 20px;
+  background-color: black;
+  color:white;
+}
+
+tr:nth-child(even){
+  background: #CD5C5C;
+
+}
+
+tr:nth-child(odd){
+  background: #E0E0E0;
 
 }
