--- a/Movies_App/css/style.css
+++ b/Movies_App/css/style.css
@@ -120,33 +120,40 @@ h1{
   width:80%;
   border: 1px solid orange;
 
+
 }
 
  .mtable {
   border: 1px solid gray;
-  text-align: center;
   width: 70%;
-  table-layout: auto;
+  table-layout:fixed;
   margin: auto;
   height: 80%;
   overflow: scroll;
   border-collapse: collapse;
 
+
 }
 th,td{
   width: 20%;
+  height:15px;
   border: 1px solid gray;
-  padding: 10px;
+  padding: 5px;
   text-align: left;
   vertical-align: middle;
 
 }
+td{
+  font-weight: 100;
+  font-family:'Crimson Text', serif;
+  
+}
 
 th{
-  padding: 20px;
-  font-weight: bold;
+  padding: 10px;
+  font-weight: 500;
   font-family:monospace;
-  font-size: 20px;
+  font-size: 18px;
   background-color: black;
   color:white;
 }
@@ -161,17 +168,13 @@ tr:nth-child(odd){
 
 }
 
+.mtable a{
+  text-decoration: none;
+  color:black;
+}
 
+/* ++++++++  Modal ++++++++ */
 
-/* .modal{
-
-  height: 50px;
-  width: 100px;
-
-  border: 5px solid maroon;
-
-
-} */
 .modal {
 	background-color: rgba(0,0,0,0.4);
 	position: fixed;
