--- a/Movies_App/css/style.css
+++ b/Movies_App/css/style.css
@@ -4,6 +4,9 @@
   width: 100%;
   border: 2px solid green;
   margin: auto;
+  /* background-color: rgb(50,50,50,0.6); */
+
+
 }
 h1{
   text-align: center;
@@ -17,7 +20,7 @@ h1{
 }
 
 .main{
-  height: 400px;
+  height: 100%;
   width: 100%;
   border : 2px solid red;
 }
@@ -39,8 +42,6 @@ h1{
     padding: .5em;
     margin: .3em .2em;
     border-radius: 10px;
-
-
 
 }
 .moviesLogo h1{
@@ -80,16 +81,19 @@ h1{
 
 .moviesTableHeader{
   border: 1px solid green;
-  width:80%;
+  width:100%;
+  height: 70px;
   padding: 1px;
   margin: auto;
-  margin-top: 10px;
+  /* margin-top: 10px; */
+  background-color: lightyellow;
 }
 
 .moviesTableHeader h2{
   font-family: 'Inconsolata', monospace;
   display: inline-block;
   float: left;
+  margin-left: 30%;
 }
 
 .inputYear, .inputYearBtn{
@@ -119,13 +123,15 @@ h1{
   margin:auto;
   width:80%;
   border: 1px solid orange;
+  background-image:url("myMovie.jpeg");
+  background-size: 300px 100px;
 
 
 }
 
  .mtable {
   border: 1px solid gray;
-  width: 70%;
+  width: 80%;
   table-layout:fixed;
   margin: auto;
   height: 80%;
@@ -146,7 +152,7 @@ th,td{
 td{
   font-weight: 100;
   font-family:'Crimson Text', serif;
-  
+
 }
 
 th{
@@ -164,14 +170,15 @@ tr:nth-child(even){
 }
 
 tr:nth-child(odd){
-  background: #E0E0E0;
+  /* background: #E0E0E0; */
+  background: rgb(50,50,50,0.3);
 
 }
 
-.mtable a{
+/* .mtable a{
   text-decoration: none;
-  color:black;
-}
+  color:white;
+} */
 
 /* ++++++++  Modal ++++++++ */
 
@@ -198,4 +205,19 @@ tr:nth-child(odd){
 
 .modal-textbox a{
   float: right;
+}
+
+/* ++++++ media query-+++++++++ */
+
+@media screen and (max-width: 1069px) {
+
+  .moviesCorousel{
+    display: flex;
+    background-color: #e9ece5;
+    justify-content:space-around;
+    width:100%;
+    margin: auto;
+
+  }
+   
 }
