--- a/Movies_App/css/style.css
+++ b/Movies_App/css/style.css
@@ -23,11 +23,15 @@ h1{
   height: 100%;
   width: 100%;
   border : 2px solid red;
+  background-color: lightyellow;
+  background-image:url(../images/MH-097_800x.jpg);
+  background-size: cover;
 }
  .footer{
    height: 100px;
    width: 100%;
    border : 2px solid red;
+   background-color: #B22222;
  }
 
 .moviesCorousel{
@@ -83,10 +87,12 @@ h1{
   border: 1px solid green;
   width:100%;
   height: 70px;
-  padding: 1px;
+  /* padding: 10px; */
   margin: auto;
+  margin-bottom: 20px;
+  color: white;
   /* margin-top: 10px; */
-  background-color: lightyellow;
+  background-color: black;
 }
 
 .moviesTableHeader h2{
@@ -123,14 +129,13 @@ h1{
   margin:auto;
   width:80%;
   border: 1px solid orange;
-  background-image:url("myMovie.jpeg");
   background-size: 300px 100px;
-
+  margin-bottom: 20px;
 
 }
 
  .mtable {
-  border: 1px solid gray;
+  /* border: 2px solid green; */
   width: 80%;
   table-layout:fixed;
   margin: auto;
@@ -143,7 +148,7 @@ h1{
 th,td{
   width: 20%;
   height:15px;
-  border: 1px solid gray;
+  border: 1px solid green;
   padding: 5px;
   text-align: left;
   vertical-align: middle;
@@ -171,7 +176,7 @@ tr:nth-child(even){
 
 tr:nth-child(odd){
   /* background: #E0E0E0; */
-  background: rgb(50,50,50,0.3);
+  background: lightyellow;
 
 }
 
@@ -219,5 +224,13 @@ tr:nth-child(odd){
     margin: auto;
 
   }
-   
+  .previous{
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+  .next{
+    margin-right: 1%;
+    margin-right: 1%;
+  }
+
 }
