--- a/Movies_App/css/style.css
+++ b/Movies_App/css/style.css
@@ -176,7 +176,7 @@ tr:nth-child(even){
 
 tr:nth-child(odd){
   /* background: #E0E0E0; */
-  background: lightyellow;
+  background: white;
 
 }
 
@@ -184,6 +184,7 @@ tr:nth-child(odd){
   text-decoration: none;
   color:white;
 } */
+
 
 /* ++++++++  Modal ++++++++ */
 
@@ -198,12 +199,24 @@ tr:nth-child(odd){
 	overflow: auto;
   display: none;
 }
+.modal-textbox img{
+  display: block;
+  margin: auto;
+  border: 2px solid red;
+}
+
+.modal-textbox h2{
+  text-align: center;
+  text-decoration: underline;
+  font-family: 'Crimson Text', serif;
+
+}
 
 .modal-textbox {
-	background-color: white;
+	background-color: lightpink;
 	height: 350px;
 	width: 550px;
-	border-radius: 2px;
+	border-radius: 4px;
 	margin: 150px auto;
 	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 }
