--- a/Movies_App/css/style.css
+++ b/Movies_App/css/style.css
@@ -2,9 +2,9 @@
 .body{
   height: 100%;
   width: 100%;
-  border: 2px solid green;
+  /* border: 2px solid green; */
   margin: auto;
-  /* background-color: rgb(50,50,50,0.6); */
+  background-color: rgb(50,50,50,0.6);
 
 
 }
@@ -14,7 +14,7 @@ h1{
 .header{
 
   width: 100%;
-  border : 2px solid red;
+  /* border : 2px solid red; */
   background-color: #B22222;
 
 }
@@ -22,15 +22,16 @@ h1{
 .main{
   height: 100%;
   width: 100%;
-  border : 2px solid red;
+  /* border : 2px solid red; */
   background-color: lightyellow;
   background-image:url(../images/MH-097_800x.jpg);
   background-size: cover;
+  display: flex;
 }
  .footer{
    height: 100px;
    width: 100%;
-   border : 2px solid red;
+   /* border : 2px solid red; */
    background-color: #B22222;
  }
 
@@ -84,12 +85,12 @@ h1{
 /* ////////Movies Table  */
 
 .moviesTableHeader{
-  border: 1px solid green;
+  /* border: 1px solid green; */
   width:100%;
   height: 70px;
   /* padding: 10px; */
   margin: auto;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   color: white;
   /* margin-top: 10px; */
   background-color: black;
@@ -99,7 +100,7 @@ h1{
   font-family: 'Inconsolata', monospace;
   display: inline-block;
   float: left;
-  margin-left: 30%;
+  margin-left: 10%;
 }
 
 .inputYear, .inputYearBtn{
@@ -125,20 +126,22 @@ h1{
 }
 
 .moviesTable{
-  clear: both;
-  margin:auto;
-  width:80%;
-  border: 1px solid orange;
+
+  margin-left: 30px;
+  width:60%;
+  /* border: 1px solid orange; */
   background-size: 300px 100px;
   margin-bottom: 20px;
 
 }
 
+
+
  .mtable {
   /* border: 2px solid green; */
-  width: 80%;
+  width: 100%;
   table-layout:fixed;
-  margin: auto;
+  /* margin: auto; */
   height: 80%;
   overflow: scroll;
   border-collapse: collapse;
@@ -148,7 +151,7 @@ h1{
 th,td{
   width: 20%;
   height:30px;
-  border: 1px solid green;
+  border: 1px solid brown;
   padding: 5px;
   text-align: left;
   vertical-align: middle;
@@ -184,6 +187,48 @@ tr:nth-child(odd){
 }
 tr p{
   visibility: hidden;
+  height:0;
+}
+
+/* ++++++++++ Side Div My Watch List++++++++++++++++ */
+
+.aside {
+  display:inline-block;
+  float: right;
+  margin-left: 10%;
+}
+.watchlist{
+  margin-left: 50px;
+  width:25px;
+  height:25px;
+  border: 1px solid black;
+}
+
+.my-watchlist {
+    padding: 0;
+    margin: 0;
+    dislay: table;
+    border-spacing: .3em;
+}
+
+.my-watchlist li {
+    color: white;
+    display: table-row;
+    list-style-position: inside;
+}
+
+.my-watchlist h3{
+  font-size: 24px;
+  color:yellow;
+  font-family: monospace;
+}
+
+.remove {
+    border: 2px solid #aaa;
+    border-radius: 4px;
+    display: table-cell;
+    margin-left: 30px;
+    background-color: red;
 }
 /* .mtable a{
   text-decoration: none;
@@ -216,11 +261,41 @@ tr p{
   display: none;
 }
 
-.modal-textbox img{
-  display: block;
-  margin: auto;
-  border: 2px solid red;
+.modal-textbox {
+	background-color: lightyellow;
+  position: fixed;
+	height: 350px;
+	width: 550px;
+	border-radius: 4px;
+	margin: 150px;
+	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+
 }
+
+.modal-textbox-overview {
+  background-color: lightyellow;
+  position: fixed;
+	height: 250px;
+	width: 350px;
+	border-radius: 4px;
+	margin: 250px;
+	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+
+.modal-textbox img{
+
+  border: 1px solid red;
+  float: right;
+  margin-right: 5px;
+  height:250px;
+
+}
+.modal-textbox p{
+  text-align: left;
+  margin-left: 5px;
+}
+
 
 .modal-textbox h2{
   text-align: center;
@@ -228,25 +303,11 @@ tr p{
   font-family: 'Crimson Text', serif;
 
 }
-
-.modal-textbox {
-	background-color: lightpink;
-	height: 350px;
-	width: 550px;
-	border-radius: 4px;
-	margin: 250px auto;
-	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+.modal-textbox-overview h2{
+  text-align: center;
+  text-decoration: underline;
+  font-family: 'Crimson Text', serif;
 }
-
-.modal-textbox-overview {
-  background-color: lightpink;
-	height: 250px;
-	width: 350px;
-	border-radius: 4px;
-	margin: 450px auto;
-	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-}
-
 
 .modal-textbox a{
   float: right;
@@ -262,6 +323,7 @@ tr p{
   font-family: sans-serif;
   line-height: 25px;
   margin-left: 20px;
+  margin-right: 10px;
 }
 /* ++++++ media query-+++++++++ */
 
@@ -283,5 +345,47 @@ tr p{
     margin-right: 1%;
     margin-right: 1%;
   }
+
+  .aside {
+    /* display:inline-block; */
+    /* float: right; */
+    margin-left: 3%;
+  }
+
+}
+/*  +++++++++= footer +++++++*/
+.footer{
+  display: flex;
+
+}
+.footer a{
+  display: block;
+  margin: 5px;
+  padding: 5px;
+  text-decoration: none;
+  color: white;
+  font-size: 16px;
+  font-family:sans-serif;
+
+}
+.footer a:hover{
+  color:yellow;
+}
+
+.trailers{
+  /* border: 1px solid yellow; */
+  float: left;
+  padding 10px;
+  /* margin: 30px 10px; */
+  margin: auto;
+}
+
+.news{
+  /* border: 1px solid green; */
+  float: left;
+  padding 10px;
+  /* margin: 30px 10px; */
+  margin: auto;
+  margin-left: 20px;
 
 }
