--- a/Movies_App/css/style.css
+++ b/Movies_App/css/style.css
@@ -155,9 +155,6 @@ th,td{
   padding: 5px;
   text-align: left;
   vertical-align: middle;
-  /* white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis; */
 
 }
 td{
@@ -196,6 +193,7 @@ tr p{
   display:inline-block;
   float: right;
   margin-left: 10%;
+
 }
 .watchlist{
   margin-left: 50px;
@@ -207,17 +205,22 @@ tr p{
 .my-watchlist {
     padding: 0;
     margin: 0;
-    dislay: table;
+    /* dislay: table; */
     border-spacing: .3em;
 }
 
 .my-watchlist li {
     color: white;
-    display: table-row;
-    list-style-position: inside;
+    font-size: 16px;
+    font-family: sans-serif;
+
+
+}
+.my-watchlist{
+  list-style: square;
 }
 
-.my-watchlist h3{
+.aside h3{
   font-size: 24px;
   color:yellow;
   font-family: monospace;
@@ -226,14 +229,10 @@ tr p{
 .remove {
     border: 2px solid #aaa;
     border-radius: 4px;
-    display: table-cell;
     margin-left: 30px;
     background-color: red;
 }
-/* .mtable a{
-  text-decoration: none;
-  color:white;
-} */
+
 
 
 /* ++++++++  Modal ++++++++ */
