--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -50,8 +50,9 @@ li{
 .grid-container {
   display: grid;
   grid-template-columns: auto auto;
-  
   padding: 10px;
+  margin-left:20%;
+  width:600px;
 }
 .grid-item {
   background-color: rgba(255, 255, 255, 0.8);
@@ -59,4 +60,11 @@ li{
   padding: 20px;
   font-size: 30px;
   text-align: center;
+  vertical-align: middle;
+  
+  line-height: 90px;
+  height:200px;
+  width: 300px;
+  margin: 20px;
+
 }
