--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -51,7 +51,7 @@ li{
   display: grid;
   grid-template-columns: auto auto;
   padding: 10px;
-  margin-left:20%;
+  margin-left:25%;
   width:600px;
 }
 .grid-item {
@@ -60,11 +60,16 @@ li{
   padding: 20px;
   font-size: 30px;
   text-align: center;
-  vertical-align: middle;
-  
   line-height: 90px;
   height:200px;
   width: 300px;
   margin: 20px;
+  box-sizing:border-box;
+  box-shadow: 5px 10px #888888;
 
+}
+
+.main-grid{
+  display: flex;
+  align-items: center;
 }
