--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -1,6 +1,7 @@
 body{
   padding: 0;
   margin: 0;
+  /* background-color: azure; */
 }
 
 html{
@@ -114,7 +115,14 @@ li{
 .a-btn:hover::before{
   height: 180%;
 }
+h2{
+  text-align: center;
+  padding: 10px;
+}
+#myWork > h2{
+  /* visibility: hidden; */
 
+}
 /*  ++++++++++++++++   work item row   ++++++++*/
 .work-item-row{
   display: flex;
@@ -134,6 +142,7 @@ li{
   display: block;
   width:100%;
   height:100%;
+  border: 0.5px solid grey;
 }
 .row-launch{
   align-items: center;
@@ -151,5 +160,25 @@ li{
 }
 .work-item-desc{
   margin-right: 15%;
-  margin-left: 10px;
+  margin-left:1%;
+}
+
+/*  aboutMe-section*/
+.aboutMe-sec{
+  display: flex;
+  justify-content: center;
+  background-color: lightblue;
+}
+.aboutMe-img{
+  margin-left: 15%;
+  margin-top:5%;
+}
+.My-img{
+  display: block;
+  width:70%;
+  height:50%;
+  border-radius: 50%;
+}
+.aboutMe-desc{
+  margin-right: 15%;
 }
